<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_audit_detail">Audit Detail</string>
    <string name="app_name">Versacom Audit Management</string>
    <string name="app_title">Versacom Audit Application</string>
    <string name="activity_title_inventory_site">Inventory site</string>
    <string name="activity_title_select_inventory_item">Inventory item</string>
    <string name="activity_title_audit">Site Audit</string>
    <string name="audit_date">Audit Date:</string>
    <string name="scan">Scan</string>
    <string name="button_manual">Manual</string>
    <string name="moddify_audit">Modify Audit</string>
    <string name="create_audit">Create Audit</string>
    <string name="label_sync_data">Synchronize Data</string>
    <string name="save">Save</string>
    <string name="hint_customer_site_id">Enter Site ID</string>
    <string name="hint_audit_hours">Enter audit hours</string>
    <string name="label_audit_type">Audit type</string>
    <string name="label_audit_result">Audit result</string>
    <string name="label_audit_status">Audit status</string>
    <string name="button_next">Next</string>
    <string name="button_save">Save</string>
    <string name="button_sign_out">Signout</string>
    <string name="button_login">Login</string>
    <string name="label_select_site">Select customer: </string>
    <string name="label_select_customer">Select customer: </string>
    <string name="label_select_project">Select project: </string>
    <string name="label_select_tech">Select Tech: </string>
    <string name="label_work_date">Work Date:</string>
    <string name="title_scope_of_work">Scope of Works </string>
    <string name="title_audit_defects">Audit Defects</string>
    <string name="label_scope_of_work">Scope of work: </string>
    <string name="customer_site_id">Site ID: </string>
    <string name="label_audit_hours">Audit hours: </string>
    <string name="label_select_item">Enter item name: </string>
    <string name="service_not_avilable">The service is not available. Please contact customer support!</string>
    <string name="invalid_server_response">Invalid server response. Please contact customer support!</string>
    <string name="internal_server_error">System error. Please contact customer support!</string>
    <string name="turn_off_airplane_mode">@string/no_internet</string>
    <string name="no_internet">No internet connection. Please check your internet connection.</string>
    <string name="general_service_error">General service error. Please contact customer support!</string>
    <string name="error_dialog_title">An error has occurred</string>
    <string name="unknown">Unknown</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="processing">Processing&#8230;</string>
    <string name="barcode_label">Bar code: </string>
    <string name="item_name_label">Name: </string>
    <string name="item_fullname_label">Full name: </string>
    <string name="quantity_Label">Quantity: </string>
    <string name="item_unit_label">Unit: </string>
    <string name="email_hint">Please enter email address</string>
    <string name="password_hint">Please enter password</string>
    <string name="login_enter_authentication">Please enter email address/password</string>
    <string name="delete_confirmation_title">Delete confirmation</string>
    <string name="delete_confirmation_message">Want to remove this item?</string>
    <string name="account_name">Audit Service</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="loading">Waiting for sync...</string>
    <string name="description_refresh">Refresh</string>
    <string name="label_customer">Customer: </string>
    <string name="label_site_id">Site ID: </string>
    <string name="label_audited_by">Audited by: </string>
    <string name="label_result">Result: </string>
    <string name="label_audit_date">Audited on: </string>
    <!-- Button labels -->
    <string name="button_add_sow">Add SOW</string>
    <string name="button_add_defect">Add Defect</string>

    <string name="info_dialog_title">Information</string>
    <string name="button_ok">OK</string>
    <string name="tech_add_confirmation">Do you like to add technician,%1$s in this SOW?</string>
    <string-array name="array_audit_status">
        <item>Pending</item>
        <item>External Audit Ready</item>
        <item>Complete</item>
    </string-array>
    
        <string-array name="array_audit_result">
        <item>0/0</item>
        <item>conforming</item>
        <item>non-conforming</item>
        <item>observation</item>
    </string-array>
    
    <string-array name="array_audit_type">
        <item>RBS</item>
        <item>Final</item>
        <item>Others</item>
    </string-array>
    <string-array name="array_defect_status">
        <item>Yes</item>
        <item>No</item>
        <item>Observation</item>
        <item>Pending</item>
    </string-array>

    <string name="title_audit_list">Audits</string>
    <string name="title_useraudit_list">UserAudits</string>
    <string name="title_useraudit_detail">UserAudit Detail</string>
    <string name="title_internalaudit_list">InternalAudit</string>
    <string name="title_internalaudit_detail">InternalAudit Detail</string>
    <string name="title_auditdefect_list">AuditDefects</string>
    <string name="title_auditdefect_detail">AuditDefect Detail</string>
    <string name="title_scopeofwork_list">ScopeOfWorks</string>
    <string name="title_scopeofwork_detail">ScopeOfWork Detail</string>

</resources>