<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_Logo"
        style="@style/DefaultComponentMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/versacom_logo" />

    <TextView
        android:id="@+id/tv_appName"
	android:textSize="@dimen/extra_huge_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_Logo"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/app_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="left"
         style="@style/LoginFormContainer"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_emailAddress"
            style="@style/DefaultComponentMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_Password"
            style="@style/DefaultComponentMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/DefaultComponentMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="authenticateUser"
            android:text="@string/button_login" />
    </LinearLayout>

</RelativeLayout>