<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" style="@style/PageContainer" 
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_Customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_select_customer" />

        <Spinner
            android:id="@+id/sp_siteList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_customerSiteAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_site_id" 
            android:layout_marginTop="10dp" />
        
    
        <EditText
            android:id="@+id/et_customerSiteID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" 
            android:hint="@string/hint_customer_site_id"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_AuditDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audit_date"
            android:layout_marginTop="10dp"  />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="selectDate" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:inputType="date" >
            </EditText>

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/editText1"
                android:layout_toRightOf="@+id/editText1"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:onClick="selectDate"
                android:src="@drawable/ic_action_go_to_today" />
        </RelativeLayout>
        
        <TextView
            android:id="@+id/tv_auditHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_audit_hours" 
            android:layout_marginTop="10dp" />
        
    
        <EditText
            android:id="@+id/et_auditHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" 
            android:hint="@string/hint_audit_hours"
            android:inputType="numberDecimal" />   
            
        
        <TextView
            android:id="@+id/tv_auditType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_audit_type" 
            android:layout_marginTop="10dp" />
        
        <Spinner
            android:id="@+id/sp_auditType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
                
        <TextView
            android:id="@+id/tv_auditStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_audit_status" 
            android:layout_marginTop="10dp" />
        
        <Spinner
            android:id="@+id/sp_auditStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_auditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
        
   
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        style="@style/BottomBarDimensions"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
         >

        <Button
            android:id="@+id/btn_Next"
            style="@style/BottomBarBtnStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="saveAuditMaster"
            android:text="@string/button_next" />
    </RelativeLayout>

</RelativeLayout>