<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/top_bar"
        style="@style/PanelTitleStyle"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tv_panel_title"
            style="@style/BigTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:text="Scope Of Work" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_topContainer"
        style="@style/PageContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_work_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_scope_of_work" />

        <Spinner
            android:id="@+id/sp_work_type_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_date_of_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_work_date" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/et_work_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:inputType="date" >
            </EditText>

            <ImageButton
                android:id="@+id/ibtn_work_date"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/et_work_date"
                android:layout_toRightOf="@+id/et_work_date"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:src="@drawable/ic_action_go_to_today" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_employee_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_select_tech" />

        <AutoCompleteTextView
            android:id="@+id/sp_employee_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_tech_list"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/ll_topContainer"
        android:clickable="true"
        android:paddingLeft="16dp"
        android:requiresFadingEdge="vertical" />

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lv_tech_list"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_save_sow_master"
            style="@style/BottomBarBtnStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />
    </RelativeLayout>

</RelativeLayout>