<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_siteName"
            style="@style/GreyTextMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:lineSpacingExtra="8dip"
            android:text="@string/label_select_site" />

        <Spinner
            android:id="@+id/sp_siteList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />
        
        <TextView
            android:id="@+id/tv_customerSiteAccess"
            style="@style/GreyTextMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="8dip"
            android:text="@string/customer_site_id" />
        
        <EditText
            android:id="@+id/et_customerSiteID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="text" />
                
    
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        style="@style/BottomBarDimensions"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bar_background_layers" >

        <Button
            android:id="@+id/btn_Next"
            style="@style/BottomBarBtnStyle2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="navigateToList"
            android:text="@string/button_next" />
    </RelativeLayout>

</RelativeLayout>